--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     .follow-btn{background:#ff0050;color:#fff;border:none;border-radius:8px;padding:10px 20px;font-size:14px;cursor:pointer;}
     .follow-btn.following{background:#2f2f2f;}
     
+    /* Settings Icon */
+    .settings-icon{position:absolute;top:20px;right:20px;font-size:20px;color:#b0b0b0;cursor:pointer;}
+
     /* Drafts Section */
     .drafts-section{background:#111;padding:16px;margin:16px 0;border-radius:12px;}
     .drafts-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;}
@@ -146,6 +149,19 @@
     .upload-cancel{background:#2f2f2f;color:#fff;}
     .upload-post{background:#ff0050;color:#fff;}
 
+    /* Settings Modal */
+    .settings-modal{background:#000;width:100%;height:70%;position:fixed;bottom:0;border-radius:20px 20px 0 0;display:none;flex-direction:column;z-index:2000;}
+    .settings-header{display:flex;justify-content:space-between;align-items:center;padding:16px;border-bottom:1px solid #2f2f2f;}
+    .settings-title{font-size:18px;font-weight:600;}
+    .settings-close{background:none;border:none;color:#fff;font-size:20px;cursor:pointer;}
+    .settings-list{flex:1;overflow-y:auto;padding:0;}
+    .settings-item{display:flex;justify-content:space-between;align-items:center;padding:16px;border-bottom:1px solid #2f2f2f;cursor:pointer;}
+    .settings-item:active{background:#1a1a1a;}
+    .settings-info{flex:1;}
+    .settings-name{font-size:16px;font-weight:500;margin-bottom:4px;}
+    .settings-desc{font-size:13px;color:#b0b0b0;}
+    .settings-arrow{color:#b0b0b0;}
+
     /* Comment Modal */
     .comment-modal{background:#000;width:100%;height:70%;position:fixed;bottom:0;border-radius:20px 20px 0 0;display:none;flex-direction:column;z-index:2000;}
     .comment-header{display:flex;justify-content:space-between;align-items:center;padding:16px;border-bottom:1px solid #2f2f2f;}
@@ -159,10 +175,6 @@
     .comment-input{flex:1;padding:12px 16px;background:#2f2f2f;border:none;border-radius:20px;color:#fff;font-size:14px;outline:none;}
     .comment-send{background:#ff0050;color:#fff;border:none;border-radius:50%;width:40px;height:40px;display:flex;align-items:center;justify-content:center;cursor:pointer;}
 
-    /* Loading */
-    .spinner{border:3px solid #2f2f2f;border-left:3px solid #ff0050;border-radius:50%;width:24px;height:24px;animation:spin 1s linear infinite;margin:20px auto;}
-    @keyframes spin{to{transform:rotate(360deg)}}
-
     /* Share Modal */
     .share-modal{background:#000;width:100%;height:50%;position:fixed;bottom:0;border-radius:20px 20px 0 0;display:none;flex-direction:column;z-index:2000;}
     .share-header{display:flex;justify-content:space-between;align-items:center;padding:16px;border-bottom:1px solid #2f2f2f;}
@@ -172,6 +184,13 @@
     .share-option{display:flex;flex-direction:column;align-items:center;gap:8px;}
     .share-icon{width:60px;height:60px;border-radius:50%;background:#2f2f2f;display:flex;align-items:center;justify-content:center;font-size:24px;}
     .share-label{font-size:12px;text-align:center;}
+
+    /* Loading */
+    .spinner{border:3px solid #2f2f2f;border-left:3px solid #ff0050;border-radius:50%;width:24px;height:24px;animation:spin 1s linear infinite;margin:20px auto;}
+    @keyframes spin{to{transform:rotate(360deg)}}
+
+    /* Success Message */
+    .success-message{position:fixed;top:20px;left:50%;transform:translateX(-50%);background:#00ff88;color:#000;padding:12px 20px;border-radius:8px;font-weight:600;z-index:3000;display:none;}
   </style>
 </head>
 <body>
@@ -236,6 +255,9 @@
 
     <!-- ==== PROFILE ==== -->
     <div id="profile-page" class="page profile-page">
+      <div class="settings-icon" onclick="openSettings()">
+        <i class="fas fa-cog"></i>
+      </div>
       <div class="profile-header">
         <div class="profile-top">
           <div class="profile-avatar">
@@ -429,6 +451,81 @@
     </div>
   </div>
 
+  <!-- Settings Modal -->
+  <div id="settings-modal" class="settings-modal">
+    <div class="settings-header">
+      <div class="settings-title">Settings</div>
+      <button class="settings-close" onclick="closeSettings()">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+    <div class="settings-list">
+      <div class="settings-item" onclick="editProfile()">
+        <div class="settings-info">
+          <div class="settings-name">Edit Profile</div>
+          <div class="settings-desc">Change your username, bio, and profile picture</div>
+        </div>
+        <div class="settings-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="settings-item" onclick="privacySettings()">
+        <div class="settings-info">
+          <div class="settings-name">Privacy</div>
+          <div class="settings-desc">Manage your account privacy and security</div>
+        </div>
+        <div class="settings-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="settings-item" onclick="notificationSettings()">
+        <div class="settings-info">
+          <div class="settings-name">Notifications</div>
+          <div class="settings-desc">Control your notification preferences</div>
+        </div>
+        <div class="settings-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="settings-item" onclick="contentPreferences()">
+        <div class="settings-info">
+          <div class="settings-name">Content Preferences</div>
+          <div class="settings-desc">Manage your content and feed preferences</div>
+        </div>
+        <div class="settings-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="settings-item" onclick="helpCenter()">
+        <div class="settings-info">
+          <div class="settings-name">Help Center</div>
+          <div class="settings-desc">Get help and support</div>
+        </div>
+        <div class="settings-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="settings-item" onclick="aboutApp()">
+        <div class="settings-info">
+          <div class="settings-name">About</div>
+          <div class="settings-desc">App version and information</div>
+        </div>
+        <div class="settings-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="settings-item" onclick="logout()" style="color:#ff0050;">
+        <div class="settings-info">
+          <div class="settings-name">Log Out</div>
+          <div class="settings-desc">Sign out of your account</div>
+        </div>
+        <div class="settings-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Comment Modal -->
   <div id="comment-modal" class="comment-modal">
     <div class="comment-header">
@@ -506,6 +603,11 @@
         <div class="share-label">Email</div>
       </div>
     </div>
+  </div>
+
+  <!-- Success Message -->
+  <div id="success-message" class="success-message">
+    <i class="fas fa-check-circle"></i> Post uploaded successfully!
   </div>
 
   <!-- ==== Firebase ==== -->
@@ -696,6 +798,70 @@
       showModal('gallery-modal');
     }
 
+    // ---------- Settings Functions ----------
+    function openSettings() {
+      showModal('settings-modal');
+    }
+
+    function closeSettings() {
+      document.getElementById('settings-modal').style.display = 'none';
+    }
+
+    function editProfile() {
+      closeSettings();
+      const newUsername = prompt('Enter new username:', currentUser.displayName || currentUser.email.split('@')[0]);
+      if (newUsername) {
+        db.ref('users/' + currentUser.uid + '/username').set(newUsername);
+        showSuccess('Profile updated successfully!');
+      }
+    }
+
+    function privacySettings() {
+      closeSettings();
+      alert('Privacy settings would open here');
+    }
+
+    function notificationSettings() {
+      closeSettings();
+      alert('Notification settings would open here');
+    }
+
+    function contentPreferences() {
+      closeSettings();
+      alert('Content preferences would open here');
+    }
+
+    function helpCenter() {
+      closeSettings();
+      alert('Help center would open here');
+    }
+
+    function aboutApp() {
+      closeSettings();
+      alert('TikTok Social App v1.0\nBuilt with Firebase Real-time Database');
+    }
+
+    function logout() {
+      if (confirm('Are you sure you want to log out?')) {
+        auth.signOut().then(() => {
+          showPage('auth');
+          document.getElementById('app').style.display = 'none';
+          document.getElementById('auth-email').value = '';
+          document.getElementById('auth-pass').value = '';
+        });
+      }
+    }
+
+    // ---------- Success Message ----------
+    function showSuccess(message) {
+      const successMsg = document.getElementById('success-message');
+      successMsg.innerHTML = `<i class="fas fa-check-circle"></i> ${message}`;
+      successMsg.style.display = 'block';
+      setTimeout(() => {
+        successMsg.style.display = 'none';
+      }, 3000);
+    }
+
     // ---------- File Upload Handling ----------
     document.getElementById('file-input').addEventListener('change', function(e) {
       const file = e.target.files[0];
@@ -744,7 +910,7 @@
         isDraft: false,
         type: selectedFile.type.startsWith('video/') ? 'video' : 'image'
       }).then(() => {
-        alert('Media uploaded successfully!');
+        showSuccess('Post uploaded successfully!');
         hideModal();
         loadGlobalFeed();
       });
@@ -935,9 +1101,9 @@
     function toggleFavorite(videoId, favoriteBtn) {
       favoriteBtn.classList.toggle('liked');
       if (favoriteBtn.classList.contains('liked')) {
-        alert('Added to favorites!');
+        showSuccess('Added to favorites!');
       } else {
-        alert('Removed from favorites!');
+        showSuccess('Removed from favorites!');
       }
     }
 
@@ -1322,7 +1488,7 @@
 
     function postDraft(videoId) {
       db.ref('videos/' + videoId + '/isDraft').set(false).then(() => {
-        alert('Draft posted successfully!');
+        showSuccess('Draft posted successfully!');
         loadProfile(currentUser.uid);
       });
     }
@@ -1335,18 +1501,6 @@
       }
     }
 
-    function editProfile() {
-      const newUsername = prompt('Enter new username:');
-      if (newUsername) {
-        db.ref('users/' + currentUser.uid + '/username').set(newUsername);
-      }
-    }
-
-    function viewProfile(userId) {
-      loadProfile(userId);
-      showPage('profile');
-    }
-
     // ---------- Demo Videos Creation ----------
     function createDemoVideos() {
       const demoVideos = [
@@ -1354,50 +1508,83 @@
           uid: 'demo_user_1',
           username: 'sanay_xettri',
           url: 'https://assets.mixkit.co/videos/preview/mixkit-group-of-friends-partying-happily-4640-large.mp4',
-          caption: 'Amazing dance moves! 💃 #dance #foryou',
-          likedBy: {},
-          comments: {},
+          caption: 'Best moments with friends! 🎉 #friends #fun',
+          likedBy: { [currentUser.uid]: true },
+          comments: {
+            comment1: {
+              uid: currentUser.uid,
+              username: currentUser.displayName || currentUser.email.split('@')[0],
+              text: 'Looks amazing!',
+              timestamp: Date.now() - 3600000
+            }
+          },
           shares: 5,
-          timestamp: Date.now() - 3600000,
-          isDraft: false
+          timestamp: Date.now() - 86400000,
+          isDraft: false,
+          type: 'video'
         },
         {
           uid: 'demo_user_2',
           username: 'rawatpharmacy',
-          url: 'https://assets.mixkit.co/videos/preview/mixkit-hands-of-a-woman-typing-on-a-computer-3980-large.mp4',
-          caption: 'New phone unboxing 📱 #tech #gadgets',
+          url: 'https://picsum.photos/400/700',
+          caption: 'New products available! 💊 #pharmacy #health',
           likedBy: {},
           comments: {},
-          shares: 3,
-          timestamp: Date.now() - 7200000,
-          isDraft: false
+          shares: 2,
+          timestamp: Date.now() - 172800000,
+          isDraft: false,
+          type: 'image'
         },
         {
           uid: 'demo_user_3',
           username: 'stem_explore',
-          url: 'https://assets.mixkit.co/videos/preview/mixkit-person-cooking-a-meal-1679-large.mp4',
-          caption: 'Quick and easy recipe! 🍳 #cooking #food',
+          url: 'https://assets.mixkit.co/videos/preview/mixkit-scientist-observing-chemical-reaction-46457-large.mp4',
+          caption: 'Science is amazing! 🔬 #science #education',
           likedBy: {},
           comments: {},
           shares: 8,
-          timestamp: Date.now() - 10800000,
-          isDraft: false
+          timestamp: Date.now() - 259200000,
+          isDraft: false,
+          type: 'video'
         }
       ];
 
-      demoVideos.forEach(video => {
-        db.ref('videos').push(video);
+      // Check if demo videos already exist
+      db.ref('videos').once('value').then(snapshot => {
+        const existingVideos = snapshot.val() || {};
+        const hasDemoVideos = Object.values(existingVideos).some(video => 
+          video.uid && video.uid.startsWith('demo_user_')
+        );
+
+        if (!hasDemoVideos) {
+          demoVideos.forEach(video => {
+            db.ref('videos').push(video);
+          });
+        }
       });
     }
 
-    // ---------- Message Badge ----------
+    // ---------- View Profile ----------
+    function viewProfile(userId) {
+      if (userId === currentUser.uid) {
+        showPage('profile');
+        loadProfile(currentUser.uid);
+      } else {
+        // In a real app, this would navigate to the user's profile
+        loadProfile(userId);
+        showPage('profile');
+      }
+    }
+
+    // ---------- Update Message Badge ----------
     function updateMessageBadge() {
-      db.ref('friendRequests/' + currentUser.uid).once('value').then((snapshot) => {
+      db.ref('friendRequests/' + currentUser.uid).once('value').then(snapshot => {
         const requests = snapshot.val() || {};
-        const badge = document.getElementById('msg-badge');
+        const requestCount = Object.keys(requests).length;
         
-        if (Object.keys(requests).length > 0) {
-          badge.textContent = Object.keys(requests).length;
+        const badge = document.getElementById('msg-badge');
+        if (requestCount > 0) {
+          badge.textContent = requestCount;
           badge.style.display = 'block';
         } else {
           badge.style.display = 'none';
@@ -1405,23 +1592,7 @@
       });
     }
 
-    // ---------- Other Upload Functions ----------
-    function startCamera() {
-      hideModal();
-      alert('Camera started! In a real app, this would open the camera.');
-    }
-
-    function goLive() {
-      hideModal();
-      alert('Live streaming started!');
-    }
-
-    function createDraft() {
-      hideModal();
-      alert('Draft created!');
-    }
-
-    // ---------- Inbox Tabs ----------
+    // ---------- Inbox Tab Switching ----------
     document.querySelectorAll('.inbox-tab').forEach(tab => {
       tab.addEventListener('click', () => {
         document.querySelectorAll('.inbox-tab').forEach(t => t.classList.remove('active'));
@@ -1430,26 +1601,78 @@
       });
     });
 
-    // Enter key for chat and comments
-    document.getElementById('chat-input').addEventListener('keypress', function(e) {
-      if (e.key === 'Enter') {
-        sendMessage();
-      }
+    // ---------- Additional Features ----------
+    function startCamera() {
+      hideModal();
+      alert('Camera would open here');
+    }
+
+    function goLive() {
+      hideModal();
+      alert('Live streaming would start here');
+    }
+
+    function createDraft() {
+      hideModal();
+      // Create a draft video
+      db.ref('videos').push({
+        uid: currentUser.uid,
+        username: currentUser.displayName || currentUser.email.split('@')[0],
+        url: 'https://picsum.photos/400/700',
+        caption: 'My draft video',
+        likedBy: {},
+        comments: {},
+        shares: 0,
+        timestamp: Date.now(),
+        isDraft: true,
+        type: 'image'
+      }).then(() => {
+        showSuccess('Draft created!');
+        loadProfile(currentUser.uid);
+      });
+    }
+
+    // ---------- Initialize App ----------
+    document.addEventListener('DOMContentLoaded', function() {
+      // Add event listener for Enter key in chat
+      document.getElementById('chat-input').addEventListener('keypress', function(e) {
+        if (e.key === 'Enter') {
+          sendMessage();
+        }
+      });
+
+      // Add event listener for Enter key in comments
+      document.getElementById('comment-input').addEventListener('keypress', function(e) {
+        if (e.key === 'Enter') {
+          addComment();
+        }
+      });
+
+      // Initialize inbox tab functionality
+      updateMessageBadge();
     });
 
-    document.getElementById('comment-input').addEventListener('keypress', function(e) {
-      if (e.key === 'Enter') {
-        addComment();
-      }
-    });
+    // ---------- Auto-play videos when they become visible ----------
+    function initializeVideoAutoPlay() {
+      const videoObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          const video = entry.target;
+          if (entry.isIntersecting) {
+            video.play().catch(e => console.log('Auto-play prevented:', e));
+          } else {
+            video.pause();
+          }
+        });
+      }, { threshold: 0.7 });
 
-    // Auto-play first video
-    setTimeout(() => {
-      const firstVideo = document.querySelector('.video-card video');
-      if (firstVideo) {
-        firstVideo.play().catch(() => {});
-      }
-    }, 2000);
+      // Observe all videos
+      document.querySelectorAll('video').forEach(video => {
+        videoObserver.observe(video);
+      });
+    }
+
+    // Call this after loading videos
+    setTimeout(initializeVideoAutoPlay, 1000);
 
   </script>
 </body>
